--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -7,7 +7,7 @@
     {{ range . }}
     {{- $commentId := printf "comment-%s" ._id }}
         <li id="{{ $commentId }}">
-            {{ if not (eq .email "") }}
+            {{- if not (eq .email "") -}}
             <img
                 src="https://www.gravatar.com/avatar/{{ .email }}"
                 alt="Gravatar profile image for commenter named '{{ .name }}'"
@@ -34,15 +34,21 @@
     </ol>
 {{- end -}}
 
-<h4>Leave a comment</h4>
 <form method="POST" action="{{ .Param "staticmanUrl" }}">
-    <textarea name="fields[body]" placeholder="New Comment! Feel free to use Markdown." rows="6" required></textarea>
+
+    <label class="title" for="comment">Leave a comment</label>
+    <textarea id="comment" name="fields[body]" placeholder="Feel free to use Markdown" rows="5" required></textarea>
+
+    <div class="input">
+        <input id="name" name="fields[name]" type="text" placeholder="Your name" required>
+        <label for="name">Your name</label>
+
+        <input id="email" name="fields[email]" type="email" placeholder="your@mail.here (optional)">
+        <label for="email">Gravatar email <small class="email">(hashed with MD5, i.e. never stored nor displayed in clear text)</small>
+        </label>
+        <input id="submit" type="submit" value="Post Comment">
+    </div>
     <input type="hidden" name="options[redirect]" value="{{ .Permalink }}#comment-submitted">
     <input type="hidden" name="options[entryId]" value="{{ $id }}">
-    <div class="input">
-        <input name="fields[name]" type="text" placeholder="Your name" required>
-        <input name="fields[email]" type="email" placeholder="Gravatar email * (optional)">
-        <input type="submit" value="Post Comment">
-    </div>
-    <small class="email">* email hashed with MD5, i.e. never stored nor displayed in clear text</small>
+
 </form>
