--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -44,10 +44,11 @@
         <label for="name">Your name</label>
 
         <input id="email" name="fields[email]" type="email" placeholder="(Optional)">
-        <label for="email">Gravatar email</label>
+        <label for="email">Gravatar email *</label>
 
         <input id="submit" type="submit" value="Post Comment">
     </div>
+    <small>* hashed with MD5, i.e. never shown nor stored in plain text</small>
     <input type="hidden" name="options[redirect]" value="{{ .Permalink }}#comment-submitted">
     <input type="hidden" name="options[entryId]" value="{{ $id }}">
 
