--- a/assets/scss/single.scss
+++ b/assets/scss/single.scss
@@ -1,9 +1,13 @@
 @import 'variables';
 
-main h2 {
-  margin: 6rem auto;
-  color: $color-text;
-  text-align: center;
+main {
+  h1,
+  h2,
+  h3 {
+    margin: 4rem auto;
+    color: $color-text;
+    text-align: center;
+  }
 }
 
 main nav ul {
