--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -199,7 +199,7 @@ div.media {
   }
 
   div.index_content.row_1 {
-    grid-template-columns: 5fr 3fr;
+    grid-template-columns: 2fr 1fr 1fr;
   }
 
   div.index_content.row_2 {
