--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,7 +10,7 @@ html {
 body {
   max-width: 1200px;
   margin: 0 auto;
-  color: $color-main;
+  color: $color-text;
   background: linear-gradient(to bottom, $color-bkg-light 0%, $color-bkg-dark 30%);
   font-family: 'Roboto', sans-serif;
   font-weight: lighter;
