--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -93,6 +93,7 @@ div.social {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 3rem;
 
   span {
     color: $color-text;
@@ -170,6 +171,10 @@ div.media {
 
   footer.site {
     margin: 0;
+  }
+
+  div.social {
+    margin-top: initial;
   }
 
   div.claim {
