--- a/assets/scss/_article.scss
+++ b/assets/scss/_article.scss
@@ -20,8 +20,9 @@ article {
   }
 
   > footer {
-    margin: 1rem auto;
+    margin: 0.5rem auto;
     text-align: unset;
+    font-size: 0.9rem;
   }
 
   ul.tag_list {
