--- a/assets/scss/single.scss
+++ b/assets/scss/single.scss
@@ -7,6 +7,7 @@ main {
     margin: 4rem auto;
     color: $color-text;
     text-align: center;
+    line-height: 2.3rem;
   }
 }
 
@@ -17,5 +18,25 @@ main nav ul {
 
   li + li {
     padding-left: 2rem;
+  }
+}
+
+fieldset {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  gap: 1rem 0;
+
+  .send {
+    background-color: $color-main;
+    border: 0;
+    min-height: 2.5rem;
+    transition: ease-in 0.2s;
+  }
+
+  .send:hover {
+    color: $color-main;
+    background-color: $color-bkg-light;
+    border: 2px solid;
+    border-color: $color-main;
   }
 }
