--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -108,6 +108,14 @@ header {
   margin: 1rem auto;
 }
 
+.error {
+  margin: 3rem 0;
+  text-align: center;
+  font-size: 2rem;
+  color: red;
+  line-height: 3rem;
+}
+
 ul.buttons {
   padding-bottom: 3rem;
   margin: 2rem 0 0;
