fix broken 404 page layout

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -9,7 +9,7 @@
 <div style="position: relative;">
 
     <img
-        src="/img/background-404.jpg"
+        src="404/background.jpg"
         alt="A man looking at an extra-large ologram representing a woman pointing the index finger to him"
     />
 
