--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,8 +1,7 @@
 {{- define "head" -}}
-{{- $title := .Param "title" }}
-{{- $description := .Param "description" }}
+{{- $description := .Param "description" -}}
 
-    <title>{{ $title }}</title>
+    {{- partial "title" .Title -}}
 
     {{- with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $description | safeHTML }}
