--- a/layouts/partials/opengraph.html
+++ b/layouts/partials/opengraph.html
@@ -5,15 +5,25 @@
 <meta property="og:description" content="{{ .Param "description" }}" />
 <meta property="og:url" content="{{ .Page.Permalink }}" />
 <meta property="og:type" content="{{ if eq .Kind "page" }}article{{ else }}website{{ end }}" />
-<meta property="article:publisher" content="{{ .Site.BaseURL }}" />
 
 {{/*  <meta property="article:section" content="Coding" />  */}}
 {{/*  <meta property="article:tag" content="Coding" />  */}}
 
+{{- if and (eq .Kind "page") (eq .Section "blog") -}}
+<meta property="article:author" content="{{ .Param "author_full" }}" />
+<meta property="article:publisher" content="{{ .Parent.Permalink }}" />
+<meta property="article:section" content="Tech" />
+{{- range .Params.tags -}}<meta property="article:tag" content="{{ . }}" />{{- end -}}
+{{- with .Date -}}<meta property="article:published_time" content="{{ .Unix }}" />{{- end -}}
+{{- with .Lastmod -}}<meta property="article:modified_time" content="{{ .Unix }}" />{{- end -}}
+{{- end -}}
+
 {{- with $.Page.Resources.GetMatch "opengraph.png" -}}
+<meta property="og:image" content="{{ .Permalink }}" />
+<meta property="og:image:alt" content="A graphical banner which displays the title of this page" />
+<meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="600" />
-<meta property="og:image" content="{{ .Permalink }}" />
 <meta property="og:image:secure_url" content="{{ .Permalink }}" />
 <meta property="twitter:image" content="{{ .Permalink }}" />
 <meta property="twitter:card" content="summary_large_image" />
