Add structured data to blog posts

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,5 +1,6 @@
 {{- define "head" -}}
     {{- partial "title"  .Title -}}
+    {{- partial "structured_data" . }}
 {{- end -}}
 
 {{- define "header" -}}
