fix: add missing categories meta tag

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,6 +12,9 @@
     {{- end -}}
 
     <meta name="description" content="{{ .Param "description" }}">
+    {{- with .Params.tags -}}
+    <meta name="categories" content="{{ delimit . ", " }}">
+    {{- end -}}
 
     {{ range (slice "fontawesome" "normalize") }}
     {{ $cssFile := printf "css/%s.css" . }}
