--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -57,6 +57,9 @@
     <input type="hidden" name="config[repo]" value="{{ .Param "staticCommentsRepo" }}">
     <input type="hidden" name="config[path]" value="{{ $baseDir }}">
     <input type="hidden" name="akismet[blog]" value="{{ .Site.BaseURL }}">
+    <input type="hidden" name="akismet[blog_lang]" value="en">
+    <input type="hidden" name="akismet[authorKey]" value="name">
+    <input type="hidden" name="akismet[contentKey]" value="body">
     <input type="hidden" name="akismet[key]" value="{{ .Param "staticCommentsAkismetKey" }}">
     <input type="hidden" name="akismet[permalink]" value="{{ .Permalink }}">
 
