--- a/layouts/404.html
+++ b/layouts/404.html
@@ -10,7 +10,7 @@
 <div>
 
     <img
-        src="404/background.jpg"
+        src="404background.jpg"
         alt="A man looking at an extra-large ologram representing a woman pointing the index finger to him"
     />
 
