--- a/layouts/page/expense.html
+++ b/layouts/page/expense.html
@@ -35,13 +35,17 @@
         <input type="number" step="0.01" class="form-control" id="inputAmount">
 
         <div>Currency</div>
-        <div>
-            {{ $s := .Param "currencies"  }}
-            {{ range $index, $element := $s }}
-            <label for="inputCurrency{{ . }}">{{ . }}</label>
-            <input type="radio" name="currency" value="{{ . }}" class="form-control"
-                   id="inputCurrency{{ . }}" {{ if eq $index 0 }}checked{{ end }}>
-            {{ end }}
+        <div style="display: flex;">
+            {{- $s := .Param "currencies"  -}}
+            {{- range $index, $element := $s -}}
+            {{- $cur := index $element 0 -}}
+            {{- $emoji := index $element 1 -}}
+            <div style="padding-left: 1rem;">
+                <input type="radio" name="currency" value="{{ $cur }}" class="form-control"
+                id="inputCurrency{{ $cur }}" {{ if eq $index 0 }}checked{{ end }}>
+                <label for="inputCurrency{{ $cur }}" style="font-size: 1.3rem;">{{ $emoji }}</label>
+            </div>
+            {{- end -}}
         </div>
 
         <div class="error"></div>
