expense new: add missing error

--- a/layouts/page/expense.html
+++ b/layouts/page/expense.html
@@ -20,6 +20,8 @@
 
 <h1>Expense form</h1>
 
+<div id="error" hidden></div>
+
 <form>
     <fieldset disabled>
         <label for="inputPassword">Password</label>
