--- a/layouts/page/expense.html
+++ b/layouts/page/expense.html
@@ -14,7 +14,7 @@
 {{ define "main" }}
 <noscript>
     <header class="error">
-        Please enable JavaScript for this page to make use of this contact form
+        Please enable JavaScript for this page to make use of this form
     </header>
 </noscript>
 
